@@ -105,6 +105,8 @@ Fixes:
  * Fix a couple of possible memory leaks. [MG]
  * ordinal(12) now returns twelfth, not twelveth. Patch by Minion.
  * trunc() now ignores ANSI. Reported by Sketch. [MG]
+ * Evaluation @locks didn't receive %0-%9 args, even when they should.
+   Reported by Zen@M*U*S*H. [MG]
 
 Commands:
  * @edit/regexp[/all][/nocase], command version of regedit[all][i]().
